--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="font/stylesheet.css">
+    <link rel="icon"  sizes="32x32" href="img/favicon.ico">
+    <link rel="icon"  sizes="16x16" href="img/favicon (1).ico">
+    <link rel="shortcut icon" href="icon/favicon.ico">
+    
     <script defer src="js/script.js"></script>
-    <title>ModernHotel</title>
+    <title>GoRent</title>
 </head>
 
 <body>
@@ -35,8 +39,8 @@
                 </ul>
             </div>
             <div class="login">              
-                <a class="signup1" href="#">Sign Up</a>                           
-                <a class="login1" href="#">Login</a>               
+                <a class="signup1" href="#">Регистрация</a>                           
+                <a class="login1" href="#">Вход</a>               
             </div>
         </div>
     </section>
@@ -144,8 +148,8 @@
                     </ul>
                 </div>
                 <div class="login">
-                        <a class="signup1" href="#">Sign Up</a>
-                        <a class="login1" href="#">Login</a>
+                        <a class="signup1" href="#">Регистрация</a>
+                        <a class="login1" href="#">Вход</a>
                 </div>
             </div>
         </section>  
