--- a/oteli.html
+++ b/oteli.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ModernHotels</title>
+    <title>GoRent</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="font/stylesheet.css">
+    <link rel="icon"  sizes="32x32" href="img/favicon.ico">
+    <link rel="icon"  sizes="16x16" href="img/favicon (1).ico">
+    <link rel="shortcut icon" href="icon/favicon.ico">
 </head>
 <body class="oteli_html">
     <header class="wrapper_header">
@@ -32,8 +35,8 @@
                     </ul>
                 </div>
                 <div class="login">
-                        <a class="signup1" href="#">Sign Up</a>
-                        <a class="login1" href="#">Login</a>
+                        <a class="signup1" href="#">Регистрация</a>
+                        <a class="login1" href="#">Вход</a>
                 </div>
             </div>
         </section>   
@@ -176,8 +179,8 @@
                 </ul>
             </div>
             <div class="login">
-                    <a class="signup1" href="#">Sign Up</a>
-                    <a class="login1" href="#">Login</a>
+                    <a class="signup1" href="#">Регистрация</a>
+                    <a class="login1" href="#">Вход</a>
             </div>
         </div>
     </section>  
